--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 </head>
 
 <body>
-    <h1>Whack-a-mole!</h1><span class="score">0</span>
-    <button onClick="startGame()">Start!</button>
+    <h1>Catch the mouse!</h1>
+    <span>Score: </span><span class="score">0</span>
+
+    <div>
+        <button id="start-btn" onClick="startGame()">Start!</button>
+    </div>
 
     <div class="game">
         <div class="hole hole1">
